--- a/SoilFinder/build.gradle
+++ b/SoilFinder/build.gradle
@@ -24,4 +24,5 @@ android {
 
 dependencies {
     compile 'com.google.android.gms:play-services:+'
+    compile 'com.android.support:support-v4:18.0.0'
 }
