--- a/SoilFinder/src/main/AndroidManifest.xml
+++ b/SoilFinder/src/main/AndroidManifest.xml
@@ -44,10 +44,10 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBvM-AUHz5Ht2EqqT2Nt1SnDLyqhDPv7wk" />
- <!-- Debug key -->
+        <!-- Debug key -->
         <activity
-            android:name="com.tschuy.soilfinder.WebBrowseActivity"
-            android:label="@string/title_activity_web_browse"
+            android:name="com.tschuy.soilfinder.AboutActivity"
+            android:label="@string/title_activity_about"
             android:parentActivityName="com.tschuy.soilfinder.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
